--- a/authentication/client/.env
+++ b/authentication/client/.env
@@ -1,1 +1,3 @@
 REACT_APP_API=http://localhost:8000/api/
+REACT_APP_GOOGLE_CLIENT_ID=1036966200104-qrqoqh3bqi2luaf7un4c8jvv4cjhibo8.apps.googleusercontent.com
+REACT_APP_GOOGLE_CLIENT_SECRET=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
